objects/AccruePointsProductCategory__c.object
<CustomObject>
    <description>This object is used to contain the category of products for which points must be awarded.</description>
    <fields>
        <fullName>AccruePointsBasedOn__c</fullName>
        <label>Accrue Points Based On</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Product Quantity</fullName>
                </value>
                <value>
                    <fullName>Invoice Price</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accrued_Points__c</fullName>
        <label>Accrued Points</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LoyaltyTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loyalty Tier</label>
        <referenceTo>LoyaltyTier</referenceTo>
        <relationshipLabel>Accrue Points Product Category</relationshipLabel>
        <relationshipName>Accrue_Points_Product_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MaximumPrice__c</fullName>
        <label>Maximum Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaximumQuantity__c</fullName>
        <label>Maximum Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumPrice__c</fullName>
        <label>Minimum Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinimumQuantity__c</fullName>
        <label>Minimum Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCategory__c</fullName>
        <label>Product Category</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Accrue Points Product Category</relationshipLabel>
        <relationshipName>Accrue_Points_Product_Category</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Accrue Points Product Category</label>
    <listViews>
        <fullName>All_Accrue_Points_Product_Category</fullName>
        <columns>NAME</columns>
        <columns>Product__c</columns>
        <columns>ProductCategory__c</columns>
        <columns>LoyaltyTier__c</columns>
        <columns>AccruePointsBasedOn__c</columns>
        <columns>MinimumPrice__c</columns>
        <columns>MaximumPrice__c</columns>
        <columns>MinimumQuantity__c</columns>
        <columns>MaximumQuantity__c</columns>
        <columns>Accrued_Points__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accrue Points Product Category</label>
    </listViews>
    <nameField>
        <label>Accrue Points Product Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Accrue Points Product Category</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>